hcwyp, close to done

--- a/about.html
+++ b/about.html
@@ -5,9 +5,10 @@ permalink: /about/
 ---
 <div id="about">
 <img class="aboutme" src="/assets/sherlockme.jpg">
-  <p>Colette Isabella was born and raised in Colorado, where she was constantly exposed to the weird. Her parents called her Mousegirl, though sometimes she was Super Coletti, and with that, she was doomed?<br/>
-    Destined?<br/>
-    Something like that.<br/>
+  <p>Colette Isabella was born and raised in Colorado, where she was constantly exposed to the weird. Her parents called her Mousegirl, though sometimes she was Super Coletti, and with that, she was...<br/>
+    ----  Doomed?<br/>
+    --- Destined?<br/>
+    Something like that.<br/><br/>
     To be strange.
     </p>
     <p>To this point, she has been a beekeeper, a molecular biologist, a storyteller, a traveller, a writer, a teacher, a software developer, a Convention manager, a seamstress, a crafter, and a Maker.
