--- a/bee_game/index.html
+++ b/bee_game/index.html
@@ -30,7 +30,7 @@ title: bee_game
     <img src="lav2.png" class="lavender3 clearfix">
   </div>
   <div>
-    <img src="glow.png" class="light">
+    <img src="glow.png" class="light clearfix">
     <img src="lav3.png" class="lavender2 clearfix">
   </div>
   <div>
