fixed js for gallery

--- a/_posts/2016-08-22-thomas.html
+++ b/_posts/2016-08-22-thomas.html
@@ -6,14 +6,14 @@ comments: true
 ---
 <div class= "slothstories">
 <img class="thomas" src="/assets/slothstories/thomasintro.jpg">
-<h2 class="caption">Thomas!</h2>
+<h2 class="sub">Thomas!</h2>
 <h1>This is the beginning of my series:</h1>
 <h1>Interviews with Flying Sloths: Today's interview is with Thomas.</h1>
 <h2>Thomas was the third flying sloth born, but the first to be adopted. (Sorry ladies and gentlemen). He lives with my partner, Clayton, where he gets a lot of love and just the right number of adventures.</h2>
 <h3>What’s your name?</h3>
 <p>“Uhm. My name is Thomas, but I really like to, uhm, write. I think I am very good at it, so uh, I will write my name for you.”</p>
 <img class="thomas"src="/assets/slothstories/tomass.jpg">
-<h2 class="caption">Thomas is very good at writing.</h2>
+<h2 class="sub">Thomas is very good at writing.</h2>
 
 <h3>That’s not how you spell your name. </h3>
 <p>”Well, uhm, I tried to write it like, uhm, Colette said it was spelled, uh, but I, uhm, couldn’t figure out where the ‘h’ goes, because my name is, um, Tooom-as, not THHHom-as.”</p>
@@ -29,12 +29,12 @@ comments: true
 <p>”I have magnets in my paws. So that helps.”</p>
 <p>"I also really, uhm, like coffee. Uhm, but mostly the sugar, um, part, and also the buzzy part."</p>
 <img class="thomas"src="/assets/slothstories/toomuchchino.jpg">
-<h2 class="caption">Thomas, with one of his favorite treats.</h2>
+<h2 class="sub">Thomas, with one of his favorite treats.</h2>
 
 <h3>That’s True. But you also like to hang out on his couch, right?</h3>
 <p>”Yes. I like to watch movies with Clayton and Colette. Or one time, I got to play video games with them. Uhm, I was not very good, but it was fun to try. Also, Colette usually covers my eyes if it gets too scary.”</p>
 <img class="thomas"src="/assets/slothstories/thomasshow.jpg">
-<h2 class="caption">Marv and Thomas hold hands during the scary part of a movie</h2>
+<h2 class="sub">Marv and Thomas hold hands during the scary part of a movie</h2>
 
 <h3>Well, you are still very young.</h3>
 <p>”That’s true. I uhm, I am 3.”</p>
@@ -54,15 +54,15 @@ comments: true
 <h3>You sound like you might be very shy.</h3>
 <p>”Uhm, not really, I just, uhm, don’t like talking as much as I like, um, hugging and listening, and, uhm, cuddling.”</p>
 <img class="thomas"src="/assets/slothstories/C+T.jpg">
-<h2 class="caption">Clayton and Thomas check the news during the Washington primaries.</h2>
+<h2 class="sub">Clayton and Thomas check the news during the Washington primaries.</h2>
 <h3>That makes sense. How do you feel about your cousins?</h3>
 <p>”Yes. Uhm, I like them. Marv visits the most, uhm because Colette brings him over. But, uhm, it seems like Kimmy is very, uhm, nice. She, uhm, patted my head when I first visited. And, well, Walt is still working on, uhm, talking, but I taught him how to write S’s, uhm, even though he doesn’t have any in his name. And Vanessa is a very good mom. Uhm. Maybe Walt will be able to write his mom’s name! That has S’s. Van -essssssss-ah.”</p>
 <img class="thomas"src="/assets/slothstories/kimmy+tom.jpg">
-<h2 class="caption">Kimmy and Thomas' first meeting.</h2>
+<h2 class="sub">Kimmy and Thomas' first meeting.</h2>
 <h3>True. What about Maggie?</h3>
 <p>”Maggie is, uhm, she is very excited about exploring. She’s uhm, a little loud, and she’s as big as Walt, but, uhm, she’s very adventurous. Kimmy had to stop her from, uhm, riding on the cats when I was there. Then they both did.”</p>
 <img class="thomas"src="/assets/slothstories/maggiepat.jpg">
-<h2 class="caption">Maggie and Doctor Patrick Fibonacci Waffles</h2>
+<h2 class="sub">Maggie and Doctor Patrick Fibonacci Waffles</h2>
 
 <h3>Did you ride on the cats?</h3>
 <p>”Uhm,  no. They are too fast when they are awake. So, uhm, I just patted Patrick when he was asleep.”</p>
