--- a/hcwym.html
+++ b/hcwym.html
@@ -20,13 +20,23 @@ permalink: /hcwym/
       <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
         <img class="showpiece" src="/assets/making/0_fool_pastel.png" alt ="The Fool">
-        <span class="hcwymsub">The Fool</span>
+        <span class="hcwymsub">The Fool (v.1)</span>
+      </div>
+      <div>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
+        <img class="showpiece" src="/assets/making/0_fool_green.png" alt ="The Fool">
+        <span class="hcwymsub">The Fool(v.2)</span>
       </div>
 
       <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
         <img class= "showpiece" src="/assets/making/1_magician.png">
-        <span class="hcwymsub">The Magician</span>
+        <span class="hcwymsub">The Magician (just inked)</span>
+      </div>
+      <div>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
+        <img class= "showpiece" src="/assets/making/1_magician_done.png">
+        <span class="hcwymsub">The Magician (v.1)</span>
 
       </div>
 
