--- a/hcwym.html
+++ b/hcwym.html
@@ -16,28 +16,33 @@ permalink: /hcwym/
     <a class="next"><img src="/assets/after.png"></a>
 
     <div class="container">
-
       <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
-        <img class="showpiece" src="/assets/making/0_fool_pastel.png" alt ="The Fool">
-        <span class="hcwymsub">The Fool (v.1)</span>
+        <img class= "showpiece" src="/assets/making/2_high_priestess_done.png">
+        <span class="hcwymsub">The High Priestess (v.2) (9/24/16)</span>
       </div>
       <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
-        <img class="showpiece" src="/assets/making/0_fool_green.png" alt ="The Fool">
-        <span class="hcwymsub">The Fool(v.2)</span>
+        <img class= "showpiece" src="/assets/making/1_magician_done.png">
+        <span class="hcwymsub">The Magician (v.1) (9/23/16)</span>
       </div>
 
       <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
         <img class= "showpiece" src="/assets/making/1_magician.png">
-        <span class="hcwymsub">The Magician (just inked)</span>
+        <span class="hcwymsub">The Magician (just inked) (9/22/16)</span>
       </div>
       <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
-        <img class= "showpiece" src="/assets/making/1_magician_done.png">
-        <span class="hcwymsub">The Magician (v.1)</span>
+        <img class="showpiece" src="/assets/making/0_fool_green.png" alt ="The Fool">
+        <span class="hcwymsub">The Fool(v.2) (9/21/16)</span>
+      </div>
 
+
+      <div>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
+        <img class="showpiece" src="/assets/making/0_fool_pastel.png" alt ="The Fool">
+        <span class="hcwymsub">The Fool (v.1) (9/20/16)</span>
       </div>
 
     </div>
