the queen and mobile fix

--- a/hcwym.html
+++ b/hcwym.html
@@ -18,8 +18,15 @@ permalink: /hcwym/
     <div class="container">
       <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
+        <img class= "showpiece" src="/assets/making/3_queen_done.png">
+        <span class="hcwymsub">The The Queen (v.2) (9/29/16)</span>
+      </div>
+
+      <div>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
         <img class= "showpiece" src="/assets/making/2_high_priestess_done.png">
-        <span class="hcwymsub">The High Priestess (v.2) (9/24/16)</span>
+        <span class="hcwymsub">The High Priestess (v.2)</span>
+        <span class="hcwymsub">(9/24/16)</span>
       </div>
       <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
@@ -30,7 +37,8 @@ permalink: /hcwym/
       <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
         <img class= "showpiece" src="/assets/making/1_magician.png">
-        <span class="hcwymsub">The Magician (just inked) (9/22/16)</span>
+        <span class="hcwymsub">The Magician (just inked)</span>
+        <span class="hcwymsub">(9/22/16)</span>
       </div>
       <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
