--- a/hcwym.html
+++ b/hcwym.html
@@ -16,41 +16,52 @@ permalink: /hcwym/
     <a class="next"><img src="/assets/after.png"></a>
 
     <div class="container">
+    <div>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards<br/>These are samples from the complete set.</h2>
+        <img class="showpiece" src="/assets/making/5_hierophant_doneish.png" alt ="The Hierophant">
+        <span class="hcwymsub">The Hierophant (v.1) (10/04/16)</span>
+        <p class="hcwympara">In tarot lore, the Hierophant is the communicator, so I chose an image of a bee doing a dance, which is how they communicate along with pheromones.</p>
+      </div>
       <div>
-        <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards<br/>These are samples from the complete set.</h2>
         <img class= "showpiece" src="/assets/making/3_queen_done.png">
-        <span class="hcwymsub">The The Queen (v.2) (9/29/16)</span>
+        <span class="hcwymsub">The Queen (v.2) (9/29/16)</span>
+        <p class="hcwympara">The Queen is special in a bee colony, only she can lay viable offspring to make more bees. If she gets sickor injured, the whole hive suffers, they get confused, lost and even females who were once infertile can grow ovaries, though their offspring are never viable.</p>
       </div>
 
       <div>
-        <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards<br/>These are samples from the complete set.</h2>
         <img class= "showpiece" src="/assets/making/2_high_priestess_done.png">
         <span class="hcwymsub">The High Priestess (v.2)</span>
         <span class="hcwymsub">(9/24/16)</span>
+        <p class="hcwympara"> The High Priestess is here represented by a nurse bee, it is her job to maintain and care for the brood as they develop, as well as a new queen once she is laid.</p>
       </div>
       <div>
-        <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards<br/>These are samples from the complete set.</h2>
         <img class= "showpiece" src="/assets/making/1_magician_done.png">
         <span class="hcwymsub">The Magician (v.1) (9/23/16)</span>
+        <p class="hcwympara">The creation of honey is an extremely strange job. Females collect nectar in their second stomach, then return to the hive to regurgitate it into the comb. They then dry the nectar by vibrating their wings, and cover over it with wax to save it for winter</p>
       </div>
 
       <div>
-        <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards<br/>These are samples from the complete set.</h2>
         <img class= "showpiece" src="/assets/making/1_magician.png">
         <span class="hcwymsub">The Magician (just inked)</span>
         <span class="hcwymsub">(9/22/16)</span>
+        <p class="hcwympara">This is what my illustrations look like before I paint them.</p>
       </div>
       <div>
-        <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards<br/>These are samples from the complete set.</h2>
         <img class="showpiece" src="/assets/making/0_fool_green.png" alt ="The Fool">
-        <span class="hcwymsub">The Fool(v.2) (9/21/16)</span>
+        <span class="hcwymsub">The Fool(v.2) (9/21/16)</span><p class="hcwympara">Bees have a dance and smell for just about everything,but we have discovered, that for some reason, they cannot figure out a dance to indicate directly up.</p>
       </div>
 
 
       <div>
-        <h2 class="headline">Bee-Inspired, educational Tarot cards</h2>
+        <h2 class="headline">Bee-Inspired, educational Tarot cards<br/>These are samples from the complete set.</h2>
         <img class="showpiece" src="/assets/making/0_fool_pastel.png" alt ="The Fool">
         <span class="hcwymsub">The Fool (v.1) (9/20/16)</span>
+        <p class="hcwympara">This was the first round of coloring for The Fool</p>
       </div>
 
     </div>
