--- a/friends.html
+++ b/friends.html
@@ -3,14 +3,223 @@ layout: page
 title: friends
 permalink: /friends/
 ---
-<h1>Hello!</h1>
-<h3>Hopefully, you have found your way here through non-nefarious means.</h3>
-<h2>Below, is my latest project, which I am still working on, and trying to figure out the right mode of publishing. Thoughts?</h2>
+<div id="friendsonly">
+  <h1>Hello!</h1>
+  <h3>Hopefully, you have found your way here through non-nefarious means.</h3>
+  <h2>Below, is my latest project, which I am still working on, and trying to figure out the right mode of publishing. Thoughts?</h2>
 
-<!--<div class="tarotrow">
-  <div class="secretimg">-->
-    <img class="display" src="/secret_file/0_fool_latest.png" alt ="The Fool">
-    <span class="secretsub">The Fool (v.3)</span>
-    <p class="education">This was the first round of coloring for The Fool</p>
-  <!--</div>
-</div>-->
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/0_fool_latest.png" alt ="The Fool">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Fool (v.3)</span>
+      <p class="education">In studies of the communication of honeybees, it has been found that of all the directions, and instructions a bee can provide to others, they cannot point directly up. In Tarot lore, the Fool is interpreted as folly, mania, intoxication, or delerium, which is very much the appearance of a terribly confused but desperate bee. The reversed interpretation of negligence, carelessness, apathy and vanity feels the way a bee in this state would appear to an outsider.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg">
+      <img class="display" src="/secret_file/1_magician.png" alt ="The Magician">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Magician</span>
+      <p class="education">In order to make honey, bees collect nectar into a second stomach in their bodies just for this purpose. When they return to the hive, they regurgitate their collected nectar. It will still take the nectar from at least 10 more bees to fill one cell, then a drying process, before the cell is covered in wax to set. The Magician is about skill, diplomacy, will and subtlety, a successful harvest for a bee. The reverse is the physician, mental disease and disgrace, an unsuccessful harvest which means wasted energy requiring eating the harvest of her sisters.
+      </p>
+    </div>
+  </div>
+
+<div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/2_high_priestess.png" alt ="The High Priestess">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Hight Priestess</span>
+      <p class="education">Beehives contain multiple members with specialized positions which change throughout their lifetime. A worker bee will likely go through a few job changes in her life including a turn at Nurse Bee, where she will raise larvae and prepare the feeding honey in its final phase. The High Priestess is about secrets, mystery, an unknown future. The inverse is passion, moral or physical ardour and secret knowledge. A bee who has graduated to nurse duty, was likely born with all the knowledge she would need, but we have learned that bees teach each other far more than we ever thought!
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+      <div class="secretimg ">
+        <img class="display" src="/secret_file/3_queen.png" alt ="The Queen">
+      </div>
+      <div class="explanation">
+        <span class="secretsub">The Queen (v.2)</span>
+        <p class="education">The Queen is likely the most talked about but most mysterious member of a hive. She is the only member of the colony who *should* ever grow ovaries, and thus is the only one able to produce viable offspring. In tarot, the queen is fruitfulness, action, the unknown but also doubt and ignorance. Her long life, but complicated status is shown there.  She uses pheromones to suppress the growth of ovaries in the rest of the hive as well as to instruct the behavior of the workers. The inverse meaning is light, truth and public rejoicing. Her absence or illness is seen in the sudden decline of a once healthy hive.
+        </p>
+      </div>
+    </div>
+
+    <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/4_kings.png" alt ="The King(s)">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The King(s)</span>
+      <p class="education">Honey bee hives contain predominantly female bees. The males present do not have stingers, and are present only for show of force, as in swarming, or mating which occurs once a year. Multiple males pursue the queen into the air to copulate in flight, and in the process, die from loss of external, then internal organs. (Yup)
+      The traditional meanings of stability, power and protection are a little light in the definitions of a male bee, but conviction is pretty much all they are. The inverse, confusion to enemies, obstruction and immaturity, though. These are your guys.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/5_hierophant.png" alt ="The Hierophant">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Hierophant</span>
+      <p class="education">Bees communicate in multiple ways, most of all with pheromone and dance. We've seen bees dance out warnings of danger, directions to good fields, and calls for help using their legs, wings, antennae and abdomens. The hierophant represents alliances, servitude, and inspiration. The reverse gives us society, good understanding, and weakness.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/6_lovers.png" alt ="The Lovers">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Lovers</span>
+      <p class="education">The prevailing goal of a honey bee is to gather nectar to feed her hive. In the process of collecting her nectar, she wil rub ther sticky legs on the stamin of the plants she lands on, giving her additional protein for her provisions, as well as pollinating the plants so that they can reproduce. It is a dance necessary for both, so that flowers have evolved over time to appear more enticing to bees. The Lovers means attraction, love and trials overcome. The reverse, as failure and foolish designs comes of a fruitless journey, with no viable flowers to visit.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/7_chariot.png" alt ="The Chariot">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Chariot</span>
+      <p class="education">In Fall, as the leaves start turning and the air gets colder, some bees will still be found going out, attempting to find nectar for their winter stores. It's an arduous task, made harder by the cold, and so sometimes they have to rest. The tarot meaning is triumph, presumption, and trouble. Sometimes that rest will mean they won't have the energy to return to the hive, and they will freeze to death over night. The reverse is riot, dispute, and defeat.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/8_strength.png" alt ="Strength">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Strength</span>
+      <p class="education">Bees have so much working against them in this world, but of their enemies, wasps can be devastating. Unlike bees, wasps can sting multiple times, and they can invade in packs. Species in Japan have evolved a method of vibrating so fast, it heats the hive to kill the invaders, but European honey bees just have numbers. The meaning is Power, energy, courage and action. The reverse is weakness, discord and disgrace.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/9_hermit.png" alt ="The Hermit">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Hermit</span>
+      <p class="education">To help wayward bees keep from freezing or being eaten overnight, people have started making and putting out "bee hotels". Many different kinds of bees use them, including wild bees and carpenter bees. In tarot, the hermit is prudence, circumspection, and roguery. Reversed, it is concealment, disguise, and fear.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/10_wheel.png" alt ="The Wheel of Fortune">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Wheel of Fortune</span>
+      <p class="education">The Wheel of Fortune is about destiny, fortune success and luck. Honey bees are not combative if there is no reason. When a honey bee stings, they die, so in a situation where two bees land on a perfectly bountiful flower, they can share without concern. The reverse, is increase, abundance and superfluidity.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/11_justice.png" alt ="Justice">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Justice</span>
+      <p class="education">A sting is a death sentence to a honey bee. Only if she believes her life, her hive, or her queen are in peril will she sting the offender. Her stinger has several barbs at the end, and when she inserts it to the foe, it pulls with it her venom sack, and the rest of her internal organs. It means a powerful weapon, but a costly one. The meanings are equity, rightness, and triumph of the deserving side. The reverse is excessive severity, bias, and legal complications.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/12_hanged_bee.png" alt ="The Hanged Bee">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Hanged Bee</span>
+      <p class="education">For all the magnificence attributed to honeybees, they are still insects, and as such, are still subject to the traps of tiny animals. Especially if a bee is toward the end of her life, and thus less strong, a spider web is an easy trap to get lost in. The Hanged Man is about wisdom, trials and sacrifice. The reverse is selfishness and crowds.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/13_death.png" alt ="Death">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Death</span>
+      <p class="education">At the end of each Summer, a purge of the hive is required to keep the hive healthy. Over the Winter, the bees constantly vibrate, taking turns resting around the queen in the center, to maintain a warm hive. Male bees have extremely low energy, and so cannot help in this task. The solution is that all the male bees are run out of the hive by their sisters. Without stingers, they have little choice, and usually die just outside the hive. The meanings in the card are mortality, destruction, the end. The reverse, is inertia, sleep and hope destroyed.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/14_temperance.png" alt ="Temperance">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Temperance</span>
+      <p class="education">For many years, people could not understand how bees were capable of flying. It appeared that their large, stubby bodies could not possibly be lifted by their delicate wings, not to mention being able to remain completely stationary while in flight. Since then we have discovered that they use quick, choppy movements of their segmented wings to not defy physics, just use it. But it takes a lot of energy, which makes their diet of honey necessary. The Temperance card is about economy, moderation, management and accomodation. The reverse is disunion and competing interests.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/15_the_devil.png" alt ="The Devil">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Devil</span>
+      <p class="education">The Varoa Mite is one of the more insidious of the enemies of the bee. It burrows into her thorax, and is a dark enough shade of red, that it is often invisible to keepers. They can quickly take over a hive if missed, destroying the colony. The Devil in tarot is represented as ravage, violence, force and fatality. The reverse is pettiness, weakness and blindness.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/16_the_tower.png" alt ="The Tower">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Tower</span>
+      <p class="education">In
+      </p>
+    </div>
+  </div>
+
+</div>
+
+<!--<div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/0_fool_latest.png" alt ="The Fool">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Fool (v.3)</span>
+      <p class="education">In
+      </p>
+    </div>
+  </div>-->
+  <div id="disqus_thread"></div>
+      <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'cisabella'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+      <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
