Drunk friends sun

--- a/friends.html
+++ b/friends.html
@@ -191,10 +191,45 @@ permalink: /friends/
     </div>
     <div class="explanation">
       <span class="secretsub">The Tower</span>
-      <p class="education">In
+      <p class="education">A traditional top-bar beehive contains sixty to ninety thousand bees. The bottom box is called the Super, and is where the queen and eggs remain. Above that, are the boxes for excess honey, which the bees must fill by instinct. If they combs become full, the bees will leave the hive for new space, which is why bee keepers must keep track of them, and keep giving them fresh comb to fill. The card means misery, adversity and ruin. The reverse is oppression, imprisonment and tyranny.
       </p>
     </div>
   </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/17_the_star.png" alt ="The Star">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Star</span>
+      <p class="education">The queen is necessary to the functioning of a hive. She has a few attendents, but besides them, her job is to maintain the functioning and procedure of the workers. Tarot marks the Star as loss, privation, abandonment and sometimes hope. Which seems the definition of the isolation of power. The reverse is arrogance, haughtiness and impotence. And with the illness of a queen comes the destruction of a hive.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/18_the_moon.png" alt ="The Moon">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Moon</span>
+      <p class="education">In the winter, a beehive has a system to keep the queen alive and warm, but it is vital they don't leave if the external temperature is too low. They are cold-blooded insects, so their warmth is vital to their survival. The tarot calls The Moon danger, darkness, deception and error. The reverse is silence, inconstancy and instability.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/19_the_sun.png" alt ="The Sun">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The Sun</span>
+      <p class="education">Summer is an important time for bees. In Spring, the flowers bloom, but Summer is when the workers need to collect the nectar and pollen for surviving the cooler months. In tarot, the Sun is simply material happiness and contentment and the reverse is the lesser of the same.
+      </p>
+    </div>
+  </div>
+
+
 
 </div>
 
