--- a/friends.html
+++ b/friends.html
@@ -229,6 +229,38 @@ permalink: /friends/
     </div>
   </div>
 
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/20_judgement.png" alt ="Judgement">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Judgement</span>
+      <p class="education">When a new queen is needed for a hive, she is sent in a small, sealed box. The keeper removes the front panel, which wakes up the freeze-dried queen, but doesn't release her. Between the new queen and the hive is a cotton-candy portal which is too thick for her to get through herself, she needs the aid of the workers. She starts sending out pheromones to call for help to eat through the portal. If they accept her, they'll free her before she dies of starvation. The tarot meanings are change of position and renewal. The reverse is weakness, simplicity and decision.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/21_the_world.png" alt ="The World">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">The World</span>
+      <p class="education">Honey bees find flowers to drink from based on a mild electrical charge. They detect the charge to guide them from flower to flower, when they land on one, the mild charge emitted by their bodies neutralizes the charge on the flowers so that other pollinators don't repeatedly attempt to draw from emptied flowers. The tarot meaning is recompense, route, flight and assured success. The reverse is inertia, stagnation and permanence.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/22AceofWands.png" alt ="Ace of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Ace of Wands</span>
+      <p class="education">I chose for the Wands suit herbs. Traditionally, the Ace of Wands is a wand coming from a cloud. Bee balm is a widely popular flower to pollinators with multiple individual flowers. The card means creation, invention, birth and money. The reverse is fall, decadence, and clouded joy.
+      </p>
+    </div>
+  </div>
 
 
 </div>
