--- a/friends.html
+++ b/friends.html
@@ -262,6 +262,148 @@ permalink: /friends/
     </div>
   </div>
 
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/23_2_wands.png" alt ="Two of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Two of Wands</span>
+      <p class="education">Chamomile is one of the most well known herbs for its medicinal uses.  The Two of Wands is about physical suffering, sadness, sometimes magnificence and riches. The orb of the chamomile flower here is meant to hold the space of the globe traditionally illustrated in tarot. Chamomile tea is even a staple in most kitchens around the world. The reverse of surprise, fear, emotion and trouble seem to pair well with the soothing use of chamomile.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/24_3_wands.png" alt ="Three of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Three of Wands</span>
+      <p class="education">Catnip is an easily overlooked herb, as a mint relative, it grows quickly and in abundance. The intoxicating quality it has on cats makes it useful, but its use as a calming tea or insect repellant are also notable. The three of wands is about enterprise, discovery, and commerce, which fits sucha versatile herb. The reverse is an end to troubles, and an end to adversity or disappointment, with Catnip's few downsides, it was a good fit for this card.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/25_4_wands.png" alt ="Four of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Four of Wands</span>
+      <p class="education">Cilantro or Coriander is a very interesting herb. Cilantro is such a widely used garnish, its absence is sometimes more noticeable. The four of wands in tarot means home, repose, harmony and prosperity. The reversed is similar, with prosperity, and embellishment. The only disagreement to this reading, may come from those who dislike the taste, which is due to a genetic predisposition, but doesn't keep it out of so many dishes.
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/26_5_wands.png" alt ="Five of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Five of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/27_6_wands.png" alt ="Six of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Six of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/28_7_wands.png" alt ="Seven of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Seven of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/29_8_wands.png" alt ="Eight of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Eight of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/30_9_wands.png" alt ="Nine of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Nine of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/31_10_wands.png" alt ="Ten of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Ten of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/32_page_wands.png" alt ="Page of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Page of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/33_knight_wands.png" alt ="Knight of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Knight of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/34_queen_wands.png" alt ="Queen of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Queen of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/35_king_wands.png" alt ="King of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">King of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
 
 </div>
 
