--- a/friends.html
+++ b/friends.html
@@ -396,6 +396,17 @@ permalink: /friends/
 
   <div class="tarotrow clearfix">
     <div class="secretimg ">
+      <img class="display" src="/secret_file/36_1_cups.png" alt ="Ace of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Ace of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
       <img class="display" src="/secret_file/35_king_wands.png" alt ="King of Wands">
     </div>
     <div class="explanation">
