--- a/friends.html
+++ b/friends.html
@@ -301,7 +301,7 @@ permalink: /friends/
     </div>
     <div class="explanation">
       <span class="secretsub">Five of Wands</span>
-      <p class="education">etc
+      <p class="education">The meaning in Tarot is imitation, gain and opulence. The reverse is disputes, trickery and contradiction.
       </p>
     </div>
   </div>
@@ -394,6 +394,19 @@ permalink: /friends/
     </div>
   </div>
 
+
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/35_king_wands.png" alt ="King of Wands">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">King of Wands</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
   <div class="tarotrow clearfix">
     <div class="secretimg ">
       <img class="display" src="/secret_file/36_1_cups.png" alt ="Ace of Cups">
@@ -407,10 +420,120 @@ permalink: /friends/
 
   <div class="tarotrow clearfix">
     <div class="secretimg ">
-      <img class="display" src="/secret_file/35_king_wands.png" alt ="King of Wands">
+      <img class="display" src="/secret_file/37_2_cups.png" alt ="wo of Cups">
     </div>
     <div class="explanation">
-      <span class="secretsub">King of Wands</span>
+      <span class="secretsub">Two of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/38_3_cups.png" alt ="Three of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Three of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/39_4_cups.png" alt ="Four of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Four of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/40_5_cups.png" alt ="Five of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Five of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/41_6_cups.png" alt ="Six of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Six of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/42_7_cups.png" alt ="Seven of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Seven of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/43_8_cups.png" alt ="Eight of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Eight of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/44_9_cups.png" alt ="Nine of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Nine of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/45_10_cups.png" alt ="Ten of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Ten of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/46_page_cups.png" alt ="Page of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Page of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
+
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/back.png" alt ="Back">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Back</span>
       <p class="education">etc
       </p>
     </div>
