--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,7 @@
 ---
 layout: gallery
+title: gallery
+permalink: /gallery/
 ---
 <body>
 
@@ -139,7 +141,7 @@ layout: gallery
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm sm10" src="/pictures/atoc.jpg">
+            <img class="sm sm11" src="/pictures/aoab.jpg">
           </div>
         </div>
       </div>
@@ -163,7 +165,15 @@ layout: gallery
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm sm11" src="/pictures/aoab.jpg">
+            <img class="sm26 sm" src="/pictures/Carbon.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm sm10" src="/pictures/atoc.jpg">
           </div>
         </div>
       </div>
@@ -211,31 +221,7 @@ layout: gallery
       <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
-            <img class="sm26 sm" src="/pictures/Carbon.jpg">
-          </div>
-        </div>
-      </div>
-
-      <div class="hexagon">
-        <div class="hex1">
-          <div class= "hex2">
             <img class="sm sm27" src="/pictures/carbonandwater.jpg">
-          </div>
-        </div>
-      </div>
-
-      <div class="hexagon">
-        <div class="hex1">
-          <div class= "hex2">
-            <img class="sm sm28" src="/pictures/chessset3.jpg">
-          </div>
-        </div>
-      </div>
-
-      <div class="hexagon">
-        <div class="hex1">
-          <div class= "hex2">
-            <img class="sm sm29" src="/pictures/chessset2.jpg">
           </div>
         </div>
       </div>
@@ -272,6 +258,22 @@ layout: gallery
         </div>
       </div>
 
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm sm28" src="/pictures/chessset3.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="hexagon">
+        <div class="hex1">
+          <div class= "hex2">
+            <img class="sm sm29" src="/pictures/chessset2.jpg">
+          </div>
+        </div>
+      </div>
+
 
       <!--34-->
 
@@ -284,11 +286,11 @@ layout: gallery
       <span class="cap1 caption">
       <img class="lg lg1" src= "/pictures/blue.jpg">'Organic' Beaded Necklace: Blue glass Seed Beads</span>
 
-      <span class=" cap2 caption">
+      <span class="cap2 caption">
       <img class="lg lg2" src="/pictures/Petra1.jpg">Petra, the MouseBee of Protection
       </span>
 
-      <span class=" cap3 caption">
+      <span class="cap3 caption">
       <img class="lg lg3" src="/pictures/owl.jpg">Detail: The Owl, FEZ cosplay dress, PAX'12</span>
 
       <span class=" cap4 caption">
