--- a/hcwym.html
+++ b/hcwym.html
@@ -16,6 +16,18 @@ permalink: /hcwym/
     <a class="next"><img src="/assets/after.png"></a>
 
     <div class="container">
+    <!--<div>
+        <h2 class="headline"></h2>
+        <img class="showpiece" src="/assets/making/" alt ="">
+        <span class="hcwymsub"></span>
+        <p class="hcwympara"></p>
+      </div>-->
+    <div>
+        <h2 class="headline">Illustrations</h2>
+        <img class="showpiece" src="/assets/making/mousebeeme.png" alt ="MouseBee Me">
+        <span class="hcwymsub">MouseBee Me</span>
+        <p class="hcwympara firstitem">Fiddling with Illustration, using "Clip Studio Paint" Self portrait as a MouseBee.</p>
+      </div>
     <div>
         <h2 class="headline">Bee-Inspired, educational Tarot cards<br/>These are samples from the complete set.</h2>
         <img class="showpiece" src="/assets/making/5_hierophant_doneish.png" alt ="The Hierophant">
@@ -40,7 +52,7 @@ permalink: /hcwym/
         <h2 class="headline">Bee-Inspired, educational Tarot cards<br/>These are samples from the complete set.</h2>
         <img class= "showpiece" src="/assets/making/1_magician_done.png">
         <span class="hcwymsub">The Magician (v.1) (9/23/16)</span>
-        <p class="hcwympara">The creation of honey is an extremely strange job. Females collect nectar in their second stomach, then return to the hive to regurgitate it into the comb. They then dry the nectar by vibrating their wings, and cover over it with wax to save it for winter</p>
+        <p class="hcwympara">The creation of honey is an extremely strange job. Females collect nectar in their second stomach, then return to the hive to regurgitate it into the comb. They then dry the nectar by vibrating their wings, and cover over it with wax to save it for Winter.</p>
       </div>
 
       <div>
