fiddling with the store

--- a/friends.html
+++ b/friends.html
@@ -4,10 +4,11 @@ title: friends
 permalink: /friends/
 ---
 <div id="friendsonly">
+<div class="centered">
   <h1>Hello!</h1>
   <h3>Hopefully, you have found your way here through non-nefarious means.</h3>
   <h2>Below, is my latest project, which I am still working on, and trying to figure out the right mode of publishing. Thoughts?</h2>
-
+</div>
   <div class="tarotrow clearfix">
     <div class="secretimg ">
       <img class="display" src="/secret_file/0_fool_latest.png" alt ="The Fool">
