--- a/gallery.html
+++ b/gallery.html
@@ -5,11 +5,13 @@ permalink: /gallery/
 ---
 <body>
 
-  <div class="gallery">
+  <div id="galleryBrowser" class="gallery">
   <h1>The MouseBee Gallery</h1>
 
-    <div id="thumbnails" class="clearfix">
 
+    <div id="artList"></div>
+
+<div id="thumbnails" class="clearfix">
     <div class="hexagon">
         <div class="hex1">
           <div class= "hex2">
