--- a/store.html
+++ b/store.html
@@ -5,10 +5,16 @@ permalink: /store/
 ---
 <div id="thestore">
   <h1>Welcome to the MouseBee Store!</h1>
-  <span>My name is Colette, and I am a compulsive crafter and artist.</br>I've decided to set up here, a space where I can sell my pieces as I create them in a more direct environment. My frustration with Etsy is the lack of personal touch, so here I can show you the pieces I love and want you to be able to love, in a more personal environment.</span>
+  <span>My name is Colette, and I am an obligate crafter and artist.</br>I've decided to set up here, a space where I can sell my projects as I create them in a more direct environment. My frustration with Etsy is the lack of personal touch, so here I can show you the pieces I love, my style.</span>
 <hr class="clean">
+<ul>
+<h3>Mama Bee's Herbal Salves</h3>
+<p>Made with ingredients chosen with an eye to the science of herbs. </p>
+  <li class="listitem clearfix"><img class="shopimg " src="/assets/store/ginger.jpg"><p>Cayenne/Ginger Muscle Salve</p></li>
+  <li class="listitem clearfix"><img class="shopimg" src="/assets/store/rosemary.jpg"><p>Rosemary/Lavender Salve</p></li>
 
-
+</ul>
+<hr class="clean">
 
   <form action="/your-charge-code" method="POST" id="payment-form">
     <span class="payment-errors"></span>
