--- a/friends.html
+++ b/friends.html
@@ -528,6 +528,16 @@ permalink: /friends/
       </p>
     </div>
   </div>
+  <div class="tarotrow clearfix">
+    <div class="secretimg ">
+      <img class="display" src="/secret_file/45_10_cups.png" alt ="Ten of Cups">
+    </div>
+    <div class="explanation">
+      <span class="secretsub">Ten of Cups</span>
+      <p class="education">etc
+      </p>
+    </div>
+  </div>
 
   <div class="tarotrow clearfix">
     <div class="secretimg ">
