--- a/hcwym.html
+++ b/hcwym.html
@@ -23,6 +23,12 @@ permalink: /hcwym/
         <p class="hcwympara"></p>
       </div>-->
     <div>
+      <h2 class="headline">Pendant</h2>
+      <img class="showpiece" src="/assets/making/wingpendant.png" alt ="">
+      <span class="hcwymsub">Bee's Wings</span>
+      <p class="hcwympara">A magnifying pendant with a set of bee's wings set in resin.</p>
+    </div>
+    <div>
         <h2 class="headline">Illustrations</h2>
         <img class="showpiece" src="/assets/making/mousebeeme.png" alt ="MouseBee Me">
         <span class="hcwymsub">MouseBee Me</span>
