--- a/store.html
+++ b/store.html
@@ -7,46 +7,128 @@ permalink: /store/
   <h1>Welcome to the MouseBee Store!</h1>
   <span>My name is Colette, and I am an obligate crafter and artist.</br>I've decided to set up here, a space where I can sell my projects as I create them in a more direct environment. My frustration with Etsy is the lack of personal touch, so here I can show you the pieces I love, my style.</span>
 <hr class="clean">
-<ul>
-<h3>Mama Bee's Herbal Salves</h3>
-<p>Made with ingredients chosen with an eye to the science of herbs. </p>
-  <li class="listitem clearfix"><img class="shopimg " src="/assets/store/ginger.jpg"><p>Cayenne/Ginger Muscle Salve</p></li>
-  <li class="listitem clearfix"><img class="shopimg" src="/assets/store/rosemary.jpg"><p>Rosemary/Lavender Salve</p></li>
 
-</ul>
+  <h3>Mama Bee's Herbal Salves</h3>
+  <p>Made with ingredients chosen with an eye to the science of herbs. </p>
+  <ul>
+    <li class="listitem clearfix"><input class="checkbox" type="checkbox" name="salve"><img class="shopimg " src="/assets/store/ginger.jpg"><p class="items">Cayenne/Ginger Muscle Salve</p><p>4 oz</p><p class="price" value="20">$20.00</p>
+    </li>
+
+    <li class="listitem clearfix"><input class="checkbox" type="checkbox" name="salve"><img class="shopimg" src="/assets/store/rosemary.jpg"><p class="items">Rosemary/Lavender<br/> Salve</p><p>4 oz</p><p class="price" value="20">$20.00</p>
+    </li>
+
+  </ul>
+  <div class="totals">
+    <span class="itemsEach"></span>
+    <span class="priceEach"></span>
+  </div>
+  <span class="priceTotal clearfix"></span>
+<!--<button class="submit">submit</button>-->
+
 <hr class="clean">
 
   <form action="/your-charge-code" method="POST" id="payment-form">
-    <span class="payment-errors"></span>
+    <div class="fdetails">
+      <span class="fdetails">Name:</span>
+      <input type="text" name="name" id="name" value=" "/>
+    </div>
+    <div class="fdetails">
+      <span>Street: </span>
+      <input type="text" name="street" id="street" value=" "/>
+      <span>City: </span>
+      <input type="text" name="city" id="city" value=" "/>
+    </div>
+    <div class="fdetails">
+      <span>State: </span>
+      <select class="state" name="state" size="1">
+        <option value="empty">  </option>
+        <option value="AK">AK</option>
+        <option value="AL">AL</option>
+        <option value="AR">AR</option>
+        <option value="AZ">AZ</option>
+        <option value="CA">CA</option>
+        <option value="CO">CO</option>
+        <option value="CT">CT</option>
+        <option value="DC">DC</option>
+        <option value="DE">DE</option>
+        <option value="FL">FL</option>
+        <option value="GA">GA</option>
+        <option value="HI">HI</option>
+        <option value="IA">IA</option>
+        <option value="ID">ID</option>
+        <option value="IL">IL</option>
+        <option value="IN">IN</option>
+        <option value="KS">KS</option>
+        <option value="KY">KY</option>
+        <option value="LA">LA</option>
+        <option value="MA">MA</option>
+        <option value="MD">MD</option>
+        <option value="ME">ME</option>
+        <option value="MI">MI</option>
+        <option value="MN">MN</option>
+        <option value="MO">MO</option>
+        <option value="MS">MS</option>
+        <option value="MT">MT</option>
+        <option value="NC">NC</option>
+        <option value="ND">ND</option>
+        <option value="NE">NE</option>
+        <option value="NH">NH</option>
+        <option value="NJ">NJ</option>
+        <option value="NM">NM</option>
+        <option value="NV">NV</option>
+        <option value="NY">NY</option>
+        <option value="OH">OH</option>
+        <option value="OK">OK</option>
+        <option value="OR">OR</option>
+        <option value="PA">PA</option>
+        <option value="RI">RI</option>
+        <option value="SC">SC</option>
+        <option value="SD">SD</option>
+        <option value="TN">TN</option>
+        <option value="TX">TX</option>
+        <option value="UT">UT</option>
+        <option value="VA">VA</option>
+        <option value="VT">VT</option>
+        <option value="WA">WA</option>
+        <option value="WI">WI</option>
+        <option value="WV">WV</option>
+        <option value="WY">WY</option>
+      </select>
 
-  <div class="f-divide">
-    <div class="form-row">
-      <label>
-        <span>Card Number</span>
-        <input type="text" size="20" data-stripe="number" placeholder="•••• •••• •••• ••••" required>
-      </label>
-    </div>
-  </div>
-  <div class="f-divide">
-    <div class="form-row">
-      <label>
-        <span>Expiration (MM/YY)</span>
-        <input type="text" size="2" data-stripe="exp_month" placeholder="••" required>
-      </label>
-      <span> / </span>
-      <input type="text" size="2" data-stripe="exp_year" placeholder="••" required>
-    </div>
-  </div>
-  <div class="f-divide">
-    <div class="form-row">
-      <label>
-        <span>CVC</span>
-        <input type="text" size="4" data-stripe="cvc" placeholder="•••" required>
-      </label>
-    </div>
-  </div>
-  <div class="f-divide">
-    <input type="submit" class="submit" value="Submit Payment">
-</div>
-</form>
+          <span>Zip Code: </span>
+          <input type="text" name="zip" id="zip" value=" "/>
+        </div>
+        <hr class="cleanshort">
+        <span class="payment-errors"></span>
+        <div class="f-divide">
+          <div class="form-row">
+            <label>
+              <span>Card Number: </span>
+              <input type="text" size="20" data-stripe="number" placeholder="•••• •••• •••• ••••" required>
+            </label>
+          </div>
+      </div>
+      <div class="f-divide">
+        <div class="form-row">
+          <label>
+            <span>Expiration (MM/YY)</span>
+            <input type="text" size="2" data-stripe="exp_month" placeholder="••" required>
+          </label>
+          <span> / </span>
+          <input type="text" size="2" data-stripe="exp_year" placeholder="••" required>
+        </div>
+      </div>
+      <div class="f-divide">
+        <div class="form-row">
+          <label>
+            <span>CVC</span>
+            <input type="text" size="4" data-stripe="cvc" placeholder="•••" required>
+          </label>
+        </div>
+      </div>
+      <div class="f-divide">
+        <input type="submit" class="submit" value="Submit Payment">
+      </div>
+    </form>
+  </form>
 </div>
